--- a/index.html
+++ b/index.html
@@ -1,133 +1,10 @@
 <html>
 <head>
 	<title>Eddie</title>
-	<style>
-		@keyframes modalIn{
-			to {opacity: 1;}
-		}
-
-		@keyframes modalOut{
-			from {opacity: 1;}
-			to {opacity: 0;}
-		}
-
-		#modal {
-			display: none;
-			background-color: rgba(0, 0, 0, .6);
-			height: 100%;
-			width: 100%;
-			left: 0;
-			top: 0;
-			position: absolute;
-			opacity: 0;
-			animation-fill-mode: forwards;
-		}
-
-		#commands {
-			position: absolute;
-			right: 0px;
-		}
-
-		#lightbox {
-			position: absolute;
-			text-align: center;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%);
-			background-color: white;
-			padding: 1%;
-			border-radius: 10px;
-		}
-
-		button {
-			cursor: pointer;
-		}
-
-		#lightbox > button {
-			opacity: 0;
-			position: absolute;
-			top: 50%;
-			transform: translate(0%, -50%);
-			padding-top: 20%;
-			padding-bottom: 20%;
-			border-style: none;
-			background-color: rgba(0, 0, 0, 30);
-			font-size: 50;
-		}
-
-		#lightbox > button:hover {
-			transition: opacity 1s;
-			opacity: .5;
-		}
-
-		#lightbox > button:not(:hover) {
-			transition: opacity 1s;
-			opacity: 0;
-		}
-
-		#next {
-			right: 0px;
-			padding-left: 20%;
-			border-bottom-left-radius: 10px;
-			border-top-left-radius: 10px;
-		}
-
-		#prev {
-			left: 0px;
-			padding-right: 20%;
-			border-bottom-right-radius: 10px;
-			border-top-right-radius: 10px;
-		}
-
-		#pagination {
-			position: absolute;
-			bottom: 10px;
-			right: 10px;
-			color: white;
-		}
-
-		#info {
-			position: absolute;
-			color: white;
-			text-align: center;
-			left: 50%;
-			bottom: 20px;
-			transform: translate(-50%, 0);
-		}
-	</style>
-	<script>
-		function openModal(imgsrc){
-			var modal = document.getElementById("modal");
-			modal.style.display = "block";
-			modal.style.animationName = "modalIn";
-			modal.style.animationDuration = "1s";
-			document.getElementById("modalImageToDisplay").src = imgsrc;
-			alert(i);
-		}
-
-		function closeModal(){
-			var modal = document.getElementById("modal");
-			modal.style.animationName = "modalOut";
-			modal.style.animationDuration = "1s";
-			setTimeout(function(){
-				modal.style.display = "none";
-			}, 1000);
-		}
-
-		function modalInit(){
-			var images = document.getElementsByClassName("modalImage");
-			for(var i = 0; i < images.length; i++){
-				images[i].onclick = function(){
-					openModal(this.src);
-				}
-			}
-		}
-
-		
-
-	</script>
+	<link rel="stylesheet" type="text/css" href="modal.css">
+	<script src="modal.js"></script>
 </head>
-<body onload="modalInit();">
+<body>
 	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage">
 	<img src="https://scontent-mrs1-1.xx.fbcdn.net/v/t1.0-9/43386607_534297440384731_2975853127091093504_n.jpg?_nc_cat=1&oh=2155eced91e232d9513be2c1bba8c28d&oe=5C437680" class="modalImage">
 	<div id="modal">
