First working version

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<button onclick="closeModal();">X</button>
 		</div>
 		<div id="lightbox">
-			<button id="prev">&#x3c;</button>
-			<button id="next">&#x3e;</button>
+			<button id="prev" onclick="previousImage();">&#x3c;</button>
+			<button id="next" onclick="nextImage();">&#x3e;</button>
 			<img src="" id="modalImageToDisplay">
 		</div>
 		<div id="info">
