Fix next and previous functions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage">
 	<img src="https://scontent-mrs1-1.xx.fbcdn.net/v/t1.0-9/43386607_534297440384731_2975853127091093504_n.jpg?_nc_cat=1&oh=2155eced91e232d9513be2c1bba8c28d&oe=5C437680" class="modalImage">
+	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage">
 	<img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/43266594_1122559624584762_863405541664227328_n.jpg?_nc_cat=104&oh=df652efd451ab4852f78f9f48bdf80d4&oe=5C620329" class="modalImage">
 	<div id="modal">
 		<div id="commands">
