Image and desc done !

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<script src="modal.js"></script>
 </head>
 <body>
-	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage">
-	<img src="https://scontent-mrs1-1.xx.fbcdn.net/v/t1.0-9/43386607_534297440384731_2975853127091093504_n.jpg?_nc_cat=1&oh=2155eced91e232d9513be2c1bba8c28d&oe=5C437680" class="modalImage">
-	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage">
-	<img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/43266594_1122559624584762_863405541664227328_n.jpg?_nc_cat=104&oh=df652efd451ab4852f78f9f48bdf80d4&oe=5C620329" class="modalImage">
+	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage" name="Un" desc="Premiere image">
+	<img src="https://scontent-mrs1-1.xx.fbcdn.net/v/t1.0-9/43386607_534297440384731_2975853127091093504_n.jpg?_nc_cat=1&oh=2155eced91e232d9513be2c1bba8c28d&oe=5C437680" class="modalImage" name="Deux" desc="Deuxieme image">
+	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage" name="Trois" desc="Quatrieme image">
+	<img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/43266594_1122559624584762_863405541664227328_n.jpg?_nc_cat=104&oh=df652efd451ab4852f78f9f48bdf80d4&oe=5C620329" class="modalImage" name="Quatre" desc="Cinquième image">
+
 	<div id="modal">
 		<div id="commands">
 			<button>&#x23ee;</button>
@@ -23,8 +24,8 @@
 			<img src="" id="modalImageToDisplay">
 		</div>
 		<div id="info">
-			<h1>Name</h1>
-			<p>Desc</p>
+			<h1 id="modalImageName">Name</h1>
+			<p id="modalImageDesc">Desc</p>
 		</div>
 		<div id="pagination">
 			1/10
