--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 	<div id="modal">
 		<div id="commands">
-			<button>&#x23ee;</button>
-			<button>&#x23f8;</button>
-			<button>&#x23f5;</button>
-			<button>&#x23ed;</button>
+			<button onclick="decreaseSpeed();">&#x23ee;</button>
+			<button onclick="stopPlaying();">&#x23f8;</button>
+			<button onclick="startPlaying();">&#x23f5;</button>
+			<button onclick="increaseSpeed();">&#x23ed;</button>
 			<button onclick="closeModal();">X</button>
 		</div>
 		<div id="lightbox">
