Plays and pause done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			<p id="modalImageDesc">Desc</p>
 		</div>
 		<div id="pagination">
-			1/10
+		</div>
+		<div id="slideshowSpeed">
 		</div>
 	</div>
 </body>
