--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Eddie</title>
 	<link rel="stylesheet" type="text/css" href="modal.css">
-	<script src="modal.js"></script>
+	<script src="modal2.js"></script>
 </head>
 <body>
 	<img src="https://www.superprof.fr/blog/file/2017/11/metiers-possibles-photographie-700x467.jpeg" class="modalImage" name="Un" desc="Premiere image">
